container gaps fixed

--- a/src/app/main/accounts/detail/accounts-detail.component.scss
+++ b/src/app/main/accounts/detail/accounts-detail.component.scss
@@ -15,13 +15,22 @@
     padding-bottom: 5px;
   }
 
+  .balance-chart-container,
+  .movement-chart-container {
+    margin: 10px 30px 20px 0;
+  }
+
+  .account-info-container,
+  .movement-list-container {
+    margin: 10px 30px 20px 30px;
+  }
+
   .account-info-container,
   .balance-chart-container,
   .movement-chart-container,
   .movement-list-container {
     border-radius: 5px;
     border-style: hidden;
-    margin: 10px 30px 20px 30px;
     padding-top: 24px;
     box-shadow: 0 3px 6px #00000029;
 
@@ -127,7 +136,7 @@
           align-items: center;
           justify-content: center;
 
-          img{
+          img {
             width: 20px;
             height: 20px;
           }
